--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
