--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "react-typing-effect": "^2.0.5",
+    "swiper": "^7.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
